# Scrap

./: notes.txt
apps/: stats.py
assets/: D455_support.scad
madox_ws/: RTIMULib.ini
madox_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
madox_ws/launch/: jetbot_launch.py  launch.py  launch.sh
madox_ws/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
madox_ws/launch/log/: latest_build
madox_ws/log/: latest_build
madox_ws/src/camera/: setup.py
madox_ws/src/camera_pan_tilt/: setup.cfg  setup.py
madox_ws/src/ros2_IMU/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
madox_ws/src/ros2_IMU/src/: RTIMULibDrive10.cpp  imu (copy).cpp  imu.cpp  imuBCK.cpp
madox_ws/src/ros2_IMU/src/IMU_example/: CMakeLists.txt  class.cpp
scrap_ws/install/: local_setup.sh  setup.sh
scrap_ws/log/: latest_build
scrap_wsOLD/log/: latest_build
units/: imu.py  imu3.py  imu4.py  mjpg.txt  notes.txt  server.js  tegra_cam.py  testi2c.py
units/Camera/: a.html  basic_openCV.py  camera_test.py  classTest.py  mjpg.txt  nano_camera_test.py  notes.txt  simplecamera.py  stream1.py  stream2.py  tegra_cam.py
units/MPU6050/: checkingSavingAndLoadingCalibInfo.py  complete_caliberation.py  imuExtraction.py  kalmanExample.py  madgwickExample.py
utils/: jetbot_stats.service  oled_stats.service  robot_camera.service  robot_web_interface.service  rosbridge.service  start_robot.sh  start_robot_local.sh  start_rosbridge.sh
web/: index.js
web/html/: robot.html  vjoy.html
web/mjpeg_http/: camera.py  server.py
(+219 files in other folders)
